Adicionando os arquivos do projeto Amigo Secreto

--- a/amigoSecreto.html
+++ b/amigoSecreto.html
@@ -49,6 +49,7 @@
             }
 
             amigos.push(nome);
+            console.log("Nomes adicionados:", amigos); // Verifique os nomes no console
             document.getElementById("nomeInput").value = ""; 
             atualizarLista(); // Atualiza a lista de amigos na tela
         }
